--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb+srv://matheusmazetti:matheus123@cluster0.lfupb.mongodb.net/mywallet?retryWrites=true&w=majority
